fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ a {
 
   .regular-block {
         display: inline-block;
-        width: 400px;
+        width: 500px;
         height: 300px;
         background-color: lightgray;
         border-radius: 25px;
